tests/expectations/compiler/structs/external_struct.out
Error [ETYC0372017]: The type `child.aleo/child` is not found in the current scope.
    --> compiler-test:1:1
     |
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo/child` is not found in the current scope.
    --> compiler-test:1:1
     |
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372003]: Expected type `(child.aleo/Foo, child.aleo/Boo, parent.aleo/BooHoo, parent.aleo/Woo)` but type `(child.aleo/child, child.aleo/Boo, parent.aleo/BooHoo, parent.aleo/Woo)` was found
    --> compiler-test:12:100
     |
  12 |         let (f, b, bh, w): (child.aleo/Foo, child.aleo/Boo, parent.aleo/BooHoo, parent.aleo/Woo) = parent.aleo/create_another_wrapper();
     |                                                                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372003]: Expected type `(child.aleo/Foo, child.aleo/Boo, parent.aleo/BooHoo, parent.aleo/Woo)` but type `(child.aleo/child, child.aleo/Boo, parent.aleo/BooHoo, parent.aleo/Woo)` was found
    --> compiler-test:13:16
     |
  13 |         return parent.aleo/create_another_wrapper();
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
